unpackaged/main/default/objects/LS_VC__Visual_Calendar_Moment__c/LS_VC__Visual_Calendar_Moment__c.object-meta.xml
<CustomObject>
    <label>Visual Calendar Moment</label>
    <nameField>
        <label>Moment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar Moments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>