unpackaged/main/default/objects/LS_VC__Visual_Calendar_Moment__c/fields/LS_VC__Priority__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Priority__c</fullName>
    <label>Priority {DEPRECATED}</label>
    <referenceTo>LS_VC__Visual_Calendar_Priority__c</referenceTo>
    <relationshipLabel>Visual Calendar Moments {Deprecated}</relationshipLabel>
    <relationshipName>Petcare_Quarterly_Calendar_Moments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>