unpackaged/main/default/objects/LS_VC__Visual_Calendar_Moment__c/fields/LS_VC__URL__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>