unpackaged/main/default/objects/LS_VC__Visual_Calendar_Moment__c/validationRules/LS_VC__Category_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_VC__Category_Type</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(LS_VC__Category__r.LS_VC__Type__c, 'Monthly'))</errorConditionFormula>
    <errorDisplayField>LS_VC__Category__c</errorDisplayField>
    <errorMessage>A Monthly Moment can only be related to a Monthly Category.</errorMessage>
</ValidationRule>