unpackaged/main/default/objects/LS_VC__Visual_Calendar_Moment__c/validationRules/LS_VC__Priority_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_VC__Priority_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(LS_VC__Visual_Calendar_Priority__c)</errorConditionFormula>
    <errorDisplayField>LS_VC__Visual_Calendar_Priority__c</errorDisplayField>
    <errorMessage>You must select a Priority for this Moment</errorMessage>
</ValidationRule>